--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 /.idea/
+
+/*/.idea
+
+/*/build/
+/*/local.properties
+/*/*.iml
+/*/.gradle
+/*/.DS_Store
+/*/captures
+/*/.externalNativeBuild
+/*/.cxx
